package at.fhj.msd.swdesign.decorator;

public abstract class Component {

    abstract void operation();
}
