package at.fhj.msd.swdesign.decorator;

public class ConcreteComponent extends Component {

    @Override
    void operation() {

        System.out.println("do some operation");

    }
}
